kubernetes/pods/gke/example-1-global-lb/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: web
  name: web
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: web
  sessionAffinity: None
  type: NodePort
